--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
     <artifactId>httpclient</artifactId>
     <version>4.5.12</version>
 </dependency>
+ <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     
   </dependencies>
 </project>
